[project]
name = "datascienceproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
datascienceproject = { workspace = true }

[dependency-groups]
dev = [
    "datascienceproject",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "seaborn>=0.13.2",
]
